--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "socket.io": "^4.7.2",
     "unique-names-generator": "^4.4.0",
     "uuid-random": "^1.3.2"
   }
